tests/errors/syn_switch1.java
public class syn_switch1 {
public static void main(String[] args){
( args.length ) {
 
}
}
}